...
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_movies"
            android:textSize="24sp"
            android:textColor="@android:color/white" />
        <ImageView
            android:id="@+id/imageViewSearch"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_search_black_24dp"
            android:tint="@android:color/white"/>
    </RelativeLayout>

  <android.support.v7.widget.RecyclerView
      android:id="@+id/recyclerViewMovies"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="50dp"
      />

    <android.support.design.widget.FloatingActionButton
...
